--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
+  "engines":{
+    "node": "16.13.2",
+    "npm": "8.1.2"
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.2.0",
@@ -23,9 +27,10 @@
     "@angular/router": "~13.2.0",
     "rxjs": "~7.5.0",
     "ts-md5": "^1.2.11",
-    "tslib": "^2.3.0",
+    "tslib": "5.1^2.3.0",
     "zone.js": "~0.11.4"
   },
+  
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.2.0",
     "@angular/cli": "~13.2.0",
