--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
-  "engines":{
+  "engines": {
     "node": "16.13.2",
     "npm": "8.1.2"
   },
@@ -25,12 +25,13 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "express": "^4.17.2",
     "rxjs": "~7.5.0",
+    "serve": "^13.0.2",
     "ts-md5": "^1.2.11",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
-  
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.2.0",
     "@angular/cli": "~13.2.0",
